<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/setting_general">

        <ListPreference
            app:key="language"
            app:title="@string/setting_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:summary="@string/setting_language_summary"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_notification">

        <SwitchPreferenceCompat
            app:key="daily_reminder"
            app:title="@string/setting_daily_reminder"
            app:summary="@string/setting_daily_reminder_summary"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="release_reminder"
            app:title="@string/setting_release_reminder"
            app:summary="@string/setting_release_reminder_summary"
            app:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>
