<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_rounded_corner_white"
            android:contentDescription="@string/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/placeholder"
            android:textColor="#3f3f3f"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster" />

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/description"
            android:textColor="#a6a6a6"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/iv_poster"
            app:layout_constraintTop_toBottomOf="@id/iv_poster" />

        <TextView
            android:id="@+id/tv_rating_title"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/rating"
            android:textColor="#a6a6a6"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_release_date_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_title" />

        <TextView
            android:id="@+id/tv_release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/release_date"
            android:textColor="#a6a6a6"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />


        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto_medium"
            android:lineSpacingExtra="8sp"
            android:text="@string/placeholder"
            android:textAlignment="viewStart"
            android:textColor="#5f5f5f"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_title" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/release_date"
            android:textColor="#3f3f3f"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_release_date_title"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date_title"
            app:layout_constraintTop_toTopOf="@+id/tv_release_date_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_rating_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating_title"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_title"
            app:layout_constraintTop_toTopOf="@+id/tv_rating_title"
            android:background="@drawable/bg_rounded_corner_primary"
            android:paddingTop="4dp"
            android:paddingBottom="3dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/rating"
                app:layout_constraintBottom_toBottomOf="@+id/cl_rating_wrapper"
                app:layout_constraintStart_toStartOf="@+id/cl_rating_wrapper"
                app:layout_constraintTop_toTopOf="@+id/cl_rating_wrapper"
                app:srcCompat="@drawable/ic_star_orange_24dp" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/rating"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_star"
                app:layout_constraintStart_toEndOf="@+id/iv_star"
                app:layout_constraintTop_toTopOf="@+id/iv_star" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>